[tool.poetry]
name = "cloudvane-api"
version = "0.1.0"
description = ""
authors = ["Michael Clifford <cliffom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
